Adding detailed study of elements, errors, and events.

--- a/typescript/Standard Library.ipynb
+++ b/typescript/Standard Library.ipynb
@@ -1388,6 +1388,79 @@
   },
   {
    "cell_type": "markdown",
+   "id": "953cd324",
+   "metadata": {},
+   "source": [
+    "# Event Types and Members\n",
+    "\n",
+    "- `Event`\n",
+    "  - the base class for all events in JavaScript\n",
+    "  - you can use it as is if all you need is an __event name__ to fire\n",
+    "  - `dispatchEvent(new Event('MyEvent', {bubbles: true, cancelable: true}))`\n",
+    "    - more specific subclasses may add additional options to the options param\n",
+    "    - note that `bubbles` defaults to `false` (so be careful)\n",
+    "  - an event constructed and dispatched in code (instead of by the browser) is called a __synthetic event__\n",
+    "  - there are quite a few __members__ - only a handful are shown here:\n",
+    "    - `e.target` - original dispatch target for the event\n",
+    "      - remember you can disambiguate with `e.target.id` if you gave an ID\n",
+    "    - `e.eventPhase` - number indicating whether capture, bubble, or target\n",
+    "    - `e.isTrusted` - supposed to be true if event is not synthetic\n",
+    "      - but in practice, browsers differ in how they implement this\n",
+    "    - `e.preventDefault()` - stop the browser from taking default built-in actions on elements\n",
+    "      - the usual example given is submitting a form with a submit button\n",
+    "      - but a more fundamental example is preventing a checkbox from checking and unchecking itself in click handler\n",
+    "    - `e.stopPropagation()` - stop event from going to other levels (capture or bubble)\n",
+    "    - `e.stopImmediatePropagation()` - also stop from being handled any more at this level\n",
+    "    - `e.composedPath()` - array of elements with listeners that will be called\n",
+    "  \n",
+    "- `CustomEvent`\n",
+    "  - adds a `detail` member to both the options in constructor and to the event itself\n",
+    "  - meant to be used by web apps that need to pass their own object with events\n",
+    "  \n",
+    "- __Defining your own Event__\n",
+    "  - instead of using `CustomEvent`, you can __subclass Event itself__\n",
+    "  - then you can put whatever you want in the constructor and in the object\n",
+    "  - if all you need is an event name, you can just use `Event` and dispatch it by name though\n",
+    "  - you can also create your own instances of the below more specific events if you want\n",
+    "  \n",
+    "- `MouseEvent`\n",
+    "  - used for __click__, __mousedown__, etc.\n",
+    "  - has a few subclasses like `WheelEvent`, `DragEvent`, etc.\n",
+    "  - a lot of __readonly members__ telling you about the state of the mouse and keyboard\n",
+    "  - `e.button` has a number representing mouse button pressed\n",
+    "  - `e.clientX` and `e.clientY` for viewport coordinates\n",
+    "  - `e.pageX` and `e.pageY` for page coordiantes\n",
+    "  - `e.screenX` and `e.screenY` for screen coordinates\n",
+    "  - `e.ctrlKey`, `e.altKey`, etc. flags\n",
+    "  - `e.detail` has click count (behavior differing by specific mouse event type\n",
+    "\n",
+    "- `KeyboardEvent`\n",
+    "  - used for __keydown__, __keypress__, etc.\n",
+    "  - similar to `MouseEvent` but no coordinates and has `e.code` for keycode\n",
+    "  - __keypress__ is deprecated, and __keydown__ will repeatedly fire if the key is held down\n",
+    "\n",
+    "- `ErrorEvent`\n",
+    "  - looks like an exception, but it's an event instead\n",
+    "  - a way to propagate errors from scripts into handlers without having to break the code flow\n",
+    "  \n",
+    "- `InputEvent`\n",
+    "  - used for __input__ events from `<input>` control changes\n",
+    "  - `e.data` gives inserted text (if applicable)\n",
+    "  - `e.inputType` tells you what the change was (eg. insert, delete, etc.)\n",
+    "\n",
+    "- `FocusEvent`\n",
+    "  - form focus events like __blur__, __focus__, etc.\n",
+    "  - when an element loses focus, the browser sends __blur__ then __focusout__\n",
+    "  - when an element gains focus (after another loses it), the browser sends __focus__ then __focusin__\n",
+    "- `SubmitEvent`\n",
+    "  - for the __submit__ event after a form is submitted by the user\n",
+    "  - `e.submitter` has the button that was used to submit\n",
+    "- and __many many more__\n",
+    "  - see MDN as needed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ad08e1cb",
    "metadata": {},
    "source": [
@@ -1671,12 +1744,111 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "26f8497b",
+   "cell_type": "markdown",
+   "id": "57d45a3e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Error\n",
+    "\n",
+    "- `Error` is the base class for throwable exceptions.\n",
+    "  - you can throw it directly or subclass it\n",
+    "    - you can __throw anything__, but it makes sense to throw `Error` and subclasses instead\n",
+    "  - it can be called __with or without__ `new`\n",
+    "  - various constructors but the most commonly used are:\n",
+    "    - `Error()`\n",
+    "    - `Error(message)`\n",
+    "    - `Error(message, {cause: innerException})`\n",
+    "  - `e.message` and `e.cause` are the most useful members\n",
+    "  - there are a bunch of stack-trace related things if needed for debugging\n",
+    "- `TypeError`\n",
+    "  - parameter is not of valid type\n",
+    "- `RangeError`\n",
+    "  - parameter is out of numeric range\n",
+    "- `AggregateError`\n",
+    "  - for reporting multiple errors\n",
+    "- and __many many more__ in MDN docs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b52d7e87",
+   "metadata": {},
+   "source": [
+    "# DOM Element API\n",
+    "\n",
+    "__HINT__: most things can be modified because that was the original point of all this\n",
+    "\n",
+    "- `EventTarget`\n",
+    "  - the base for anything that can have events\n",
+    "  - `n.addEventListener()`, `n.removeEventListener()`, `n.dispatchEvent()`\n",
+    "\n",
+    "- `Node`\n",
+    "  - the base for elements as well as other things like text and comments\n",
+    "    - eg. `Text`, `Comment`, `Element`, `Document`\n",
+    "  - has everything from its base: `EventTarget`\n",
+    "  - `n.childNodes` gets all children of the node (inc. elements, text, comments, whatever)\n",
+    "    - as an __array-like__ thing\n",
+    "  - `n.firstChild`, `n.lastChild`, `n.nextSibling`, etc. (self-explanatory)\n",
+    "  - `n.nodeName` is a __read-only__ name that depends on the subclass\n",
+    "  - `n.nodeType` is a number representing the type of the node\n",
+    "    - basically redundant with the fact that the object is a specific subclass already\n",
+    "  - `n.nodeValue` gives text for comments and text nodes and null for elements\n",
+    "  - `n.textContent` is dangerous\n",
+    "  - `n.appendChild(node)` adds a child node (if it has a parent, moves it off that parent)\n",
+    "  - `n.removeChild(node)` is the opposite\n",
+    "  - `n.insertBefore(node, putBefore)`\n",
+    "  - `n.replaceChild(node, toReplace)`\n",
+    "  - `n.cloneNode()` to clone\n",
+    "  - `n.contains(node)` to check for a descendent node\n",
+    "  - a lot of other convenient methods (see MDN)\n",
+    "  \n",
+    "- `Element`\n",
+    "  - the base for all elements (subclass of `Node`)\n",
+    "  - elements don't all have to be HTML\n",
+    "    - eg. SVG and MathML\n",
+    "  - `el.attributes` gets a __map-like__ object representing attributes on an HTML element\n",
+    "  - `el.children` gets __array-like__ object representing direct child __elements__\n",
+    "  - `el.classList` gets __set-like__ list of tokens from `class` attribute\n",
+    "  - `el.className` gets the whole `class` string with spaces\n",
+    "  - `el.client*` properties give the position and size of the element in its container\n",
+    "  - `el.scroll*` properties give the position and size in the scroll view\n",
+    "  - `el.id` gets the ID attribute\n",
+    "  - `el.innerHTML` is dangerous\n",
+    "  - `el.tagName` is what it says it is\n",
+    "  - `el.aria*` for a11y\n",
+    "  - most of these can be __modified__\n",
+    "    - the collection ones can't directly, but the collections themselves have methods\n",
+    "    - the sizing and position ones and tag name cannot\n",
+    "  - plus all the members of `Node` and `EventTarget` mentioned above\n",
+    "  - `el.append(...)` is a variadic version of `n.appendChild()`\n",
+    "  - `el.getAttribute()`, `el.setAttribute()`, `el.hasAttribute()`, `el.toggleAttribute`\n",
+    "  - `el.scrollIntoView()`\n",
+    "  - `el.getElementsByTagName()`, `el.getElementsByClassName`, `el.querySelector()`, `el.querySelectorAll()`\n",
+    "  - a lot of other convenience operations listed in MDN\n",
+    "  \n",
+    "- `HTMLElement`\n",
+    "  - sublcass of `Element` specific to HTML\n",
+    "  - has all the members of `Element`, `Node`, and `EventTarget` mentioned above\n",
+    "  - `el.hidden` gives access to the `hidden` attribute\n",
+    "  - `el.draggable`, `el.inert`, etc.\n",
+    "  - `el.tabIndex`\n",
+    "  - `el.title` for popups\n",
+    "  - `el.style` for CSS Styles\n",
+    "    - all CSS properties but as __camelCase__\n",
+    "    - also `getPropertyValue()` and `setProperty()`\n",
+    "  - `el.blur()`, `el.click()`, `el.focus()`\n",
+    "  - `el.*popover()` for making an element top-level\n",
+    "  \n",
+    "- `HTMLButtonElement`\n",
+    "  - `btn.disabled` = booelan property\n",
+    "  - `btn.value` = stuff inside `<button></button>` as a string\n",
+    "  - a lot of __form__ stuff\n",
+    "\n",
+    "- `HTMLDivElement` and `HTMLSpanElement`\n",
+    "  - no unique members\n",
+    "  \n",
+    "- Others include: `HTMLAnchorElement`, `HTMLImageElement`, etc."
+   ]
   }
  ],
  "metadata": {
