Adding getBoundingClientRect() to notes.

--- a/typescript/Standard Library.ipynb
+++ b/typescript/Standard Library.ipynb
@@ -1823,6 +1823,7 @@
     "  - `el.append(...)` is a variadic version of `n.appendChild()`\n",
     "  - `el.getAttribute()`, `el.setAttribute()`, `el.hasAttribute()`, `el.toggleAttribute`\n",
     "  - `el.scrollIntoView()`\n",
+    "  - `el.getBoundingClientRect()` to translate client coordinates (eg. from mouse events) into viewport coordinates (eg. for graphics)\n",
     "  - `el.getElementsByTagName()`, `el.getElementsByClassName`, `el.querySelector()`, `el.querySelectorAll()`\n",
     "  - a lot of other convenience operations listed in MDN\n",
     "  \n",
@@ -1849,6 +1850,14 @@
     "  \n",
     "- Others include: `HTMLAnchorElement`, `HTMLImageElement`, etc."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f3ddf8b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
