Adding graphics and animation info.

--- a/typescript/Standard Library.ipynb
+++ b/typescript/Standard Library.ipynb
@@ -1852,9 +1852,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c902e3a7",
+   "metadata": {},
+   "source": [
+    "# Graphics and Animation\n",
+    "\n",
+    "## CSS Animations\n",
+    "\n",
+    "CSS animations are independent of JavaScript code, though JS code can affect it (eg. by applying classes) and listen for it (via events).\n",
+    "\n",
+    "## JS Animations\n",
+    "\n",
+    "`Element` has an `animate()` method that can apply animations similarly to CSS animations (might be exactly the same thing - not sure).\n",
+    "\n",
+    "## Custom Animations\n",
+    "\n",
+    "In general, if you want to animate something moving around on the page, all you have to do is sync that movement with the clock.  For instance, you could get `Date.now()` (which gives microseconds) at the beginning and then subtract `Date.now()` when making a movement (eg. via a `setTimeout`).\n",
+    "\n",
+    "If you want to sync the animation to the frame rate of the display device, you can use `requestAnimationFrame()` (a top-level function), which works as follows:\n",
+    "\n",
+    "  - `requestAnimationFrame(callback)` will queue up your callback to run before the __next repaint__\n",
+    "    - this will be synchronized to the device display rate \n",
+    "  - The callback receives a `timestamp` argument with __microseconds since the page was navigated__ (roughly)\n",
+    "    - use this timestamp to time out the animations in a device-independent way\n",
+    "  - The callback can change whatever it wants to on the page before returning\n",
+    "    - eg. move elements around \n",
+    "    - eg. repaint a `<canvas>` contents\n",
+    "  - The callback will only be run once, so to make it loop, you must call `requestAnimationFrame(callback)` again at the end of the callback itself\n",
+    "  \n",
+    "## Custom Graphics\n",
+    "\n",
+    "The `<canvas>` element in HTML can host your graphics.  It only has the basic `width` and `height` properties (plug the base stuff like `id`, etc.) in HTML, but the power comes from the JS APIs.\n",
+    "\n",
+    "For simple device-independent graphics, the API exposed via `HTMLCanvasElement` is the starting point. For more sophisticated/performant graphics that make use of (possibly) available hardware, use the `WebGL` API which also makes use of the `<canvas>` element.\n",
+    "\n",
+    "to draw on the canvas, you need a __drawing context__.  Use `canvas.getContext('2D')` and keep that object (it is long-living, not per-frame).\n",
+    "\n",
+    "The basic operation of the context is that you set properties and call methods to draw various shapes and things directly onto the canvas. The result of each method call depends on current property state (eg. fills, colors, etc.), but previous things drawn are not affected by changing properties.  You can erase the canvas and start over with: `ctx.clearRect(0, 0, canvas.width, canvas.height);`\n",
+    "\n",
+    "To do pixel-by-pixel drawing (if a lot of it), you will to use `context.createImageData()` to create a temporary image object. `imageData.data` is an array where every 4 items make an __rgba pixel__ in that order.  The index is `(x + y * imageData.width) * 4`. After you set all the pixels you want, use `context.putImageData()` to commit it to the canvas.\n",
+    "\n",
+    "One final thing to note is that when they talk about __erasing__ or when you create a new `imagedata`, pixels that haven't been set or have been erased are __transparent black__ (rgba = 0,0,0,0) - which means anything under them will show through completely.\n",
+    "\n",
+    "I quickly put together a TypeScript game-like thing with animated graphics and clicking here: https://github.com/davidpet/tutorials/tree/master/JavaScript/Game"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f3ddf8b",
+   "id": "abf577b5",
    "metadata": {},
    "outputs": [],
    "source": []
