Adding some updated change detection notes.
These are clarifications I wanted to make after spending a year in React World.

--- a/typescript/Angular.ipynb
+++ b/typescript/Angular.ipynb
@@ -517,9 +517,13 @@
     "1. When a triggering event occurs (user interaction event, observable emitting, http request completing, setTimeout lambda being called, etc.), run change detection process at top of tree (eg. parent component).\n",
     "   - note that change detection runs **after the handlers** for events, so that you can change bindings in event handlers and have them reflect right away\n",
     "2. Check parent component for input binding changes or field changes. The exact checking depends on which strategy the component is configured to use.\n",
+    "   - it's actually smart enough to only check fields of inputs used in the template!\n",
     "3. If any relevant change is found, mark the component dirty and check its children using their strategies, and so on.\n",
     "4. Call ngOnChanges for dirty components.\n",
     "5. Re-render dirty components (presumably from the bottom up).\n",
+    "   - usually re-rendering a parent will re-render all children, but `OnPush` can override that\n",
+    "   - if a parent is to be re-rendered and none of its children are `OnPush`, you're just rebuilding that whole tree from scratch\n",
+    "     - if a child somewhere deep in the tree has `OnPush`, it won't be rebuilt unless the parent structure changed somewhere (detectable by structural directives)\n",
     "\n",
     "### Strategy\n",
     "\n",
@@ -575,7 +579,20 @@
     "\n",
     "`this.ngZone.run(() => { this.button.click(); });`\n",
     "\n",
-    "This is usuaully used for handlers for 3rd party asynchronous libraries. You may have to run `changeDetectorRef.detectChanges()` within the same handler depending on the situation.\n"
+    "This is usuaully used for handlers for 3rd party asynchronous libraries. You may have to run `changeDetectorRef.detectChanges()` within the same handler depending on the situation.\n",
+    "\n",
+    "### Comparison to React\n",
+    "\n",
+    "- the marking dirty part is similar\n",
+    "  - the wording of docs implies parent dirtiness may not be detected until a top-down check, but I would assume they've optimized that by now\n",
+    "- whereas React makes a virtual DOM (really just parts of it), Angular just updates the real DOM\n",
+    "  - but you can tweak the performance with `OnPush` and such\n",
+    "- whereas React diffs the virtual DOM and updates the real one when needed, React doesnt' have this step\n",
+    "- in the same way you can use `key` in React for children that might change order, you can use `trackBy` in Angular\n",
+    "- whereas React builds the whole virtual DOM for a component each time with lots of branching in JS code, Angular can tell if the structure of a tree changed by the use of __structural directives__ in the template\n",
+    "  - this should eliminate a lot of the need for diffing/reconciliation\n",
+    "  - eg. if you switch from one instance of MyComponent to another due to an `*ngIf`, the engine will know it\n",
+    "    - but if you add a `<div>` above it, that means you did a structural directive there, so the structure is not stable and you will have to re-render"
    ]
   },
   {
@@ -2285,6 +2302,18 @@
     "Angular tends to benefit large enterprise projects where clear separation of HTML, CSS, and code is more beneficial and a more batteries-included framework is needed.\n",
     "\n",
     "React tends to benefit smaller projects where quickly coding up a function to make a component is helpful and where all the stuff provided by Angular is not needed."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17d78f21",
+   "metadata": {},
+   "source": [
+    "# Ivy\n",
+    "\n",
+    "The Ivy compilation/rendering engine (introduced in v9) replaced the old __View Engine__.  Instead of having a template become template data that was interpretted at runtime, the template now gets __compiled into JavaScript__ to be more efficient and allow for better debugging and various other enhancements. This is similar ot what __React__ does and is why compiled components have __factories__ (for rendering/re-rendering).\n",
+    "\n",
+    "Remember not to think of the template as the actual DOM but more like React's component tree __without the virtual DOM__ in between to the real DOM.  Angular and React are more alike than it seems when you consider that the template generates __factory code__ just like JSX in React does. Instead of diffing a virtual DOM, Angular tries to help you minimize re-rendering of components based on input changes."
    ]
   },
   {
