Adding notes about status of Angular and React notebooks.

--- a/typescript/Angular.ipynb
+++ b/typescript/Angular.ipynb
@@ -2,6 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "75d9f0ae",
+   "metadata": {},
+   "source": [
+    "# Status of This Document\n",
+    "\n",
+    "I created this document after leaving Google and then randomly contributed to it later, while being more focused on using React, and not sure if I'd be using Angular full-time professionally again.\n",
+    "\n",
+    "It's a little bit of a mess - redundant information in different places, spelling errors, incomplete information, etc.\n",
+    "\n",
+    "Because I got used to using a google doc instead of a jupyter notebook as a reference for React, I have transferred all the information from here into a google doc and continued to fix/update/enhance it. The HTML and CSS stuff is all in HTML, CSS, and SCSS google docs now (and much better there).\n",
+    "\n",
+    "The only really unique, useful part (from my perspective) now is the tutorial references, which my google doc links, but I've left all of it here for posterity.  I might randomly remove the redundant info in the future if it makes people think I don't know Angular because of the roughness of it :-)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d9e4639d",
    "metadata": {},
    "source": [
