--- a/typescript/React.ipynb
+++ b/typescript/React.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "React is a __JavaScript__ library, but __TypeScript bindings__ are available as well.\n",
     "\n",
-    "__NOTE__: most of this content has been absorbed into a Google Docs file and then greatly expanded on as I learned more React.  Thus, this document is no longer my personal goto for reviewing React."
+    "__NOTE__: most of this content has been absorbed into a Google Docs file and then greatly expanded on as I learned more React.  Thus, this document is no longer my personal goto for reviewing React. As such, it may fall out of date and fail to get updates and fixes."
    ]
   },
   {
