Updating notebook to reflect new Django doc.

--- a/python/Web Backend.ipynb
+++ b/python/Web Backend.ipynb
@@ -924,7 +924,9 @@
    "source": [
     "Django is similar in some ways to Flask, but it is more fully-featured (__\"batteries included\"__) and includes the database logic without requiring SQLAlchemy, making it a more __data driven__ framework.\n",
     "\n",
-    "Like Flask, it can be run on its own for development/debugging purposes, but can be hosted in production with __gunicorn__.  Instead of running a module like you do when using Flask, you run the project's __wsgi file__ with gunicorn."
+    "Like Flask, it can be run on its own for development/debugging purposes, but can be hosted in production with __gunicorn__.  Instead of running a module like you do when using Flask, you run the project's __wsgi file__ with gunicorn.\n",
+    "\n",
+    "NOTE: I have a more complete document in google docs that contains all this information plus more"
    ]
   },
   {
