Adding details about circular references and python implementations.

--- a/python/Caveats.ipynb
+++ b/python/Caveats.ipynb
@@ -2073,9 +2073,53 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f589a206",
+   "metadata": {},
+   "source": [
+    "# Circular References\n",
+    "\n",
+    "Python uses a combination of __refcounting__ and __garbage collection__, so if you have circular references, they will get taken care of on garbage collection.\n",
+    "\n",
+    "However, circular references can cause things like __infinite loops__ and issues with __converting to strings__."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "77ea9fb2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'self': {...}}\n",
+      "{'self': {...}}\n",
+      "\n",
+      "Executed 1000 times\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = dict()\n",
+    "d['self'] = d\n",
+    "\n",
+    "print(d)\n",
+    "print(str(d))\n",
+    "print()\n",
+    "\n",
+    "count = 0\n",
+    "while count < 1000:\n",
+    "    e = d['self']\n",
+    "    count += 1\n",
+    "print(f'Executed {count} times')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d776cfd5",
+   "id": "fad16cfd",
    "metadata": {},
    "outputs": [],
    "source": []
