--- a/typescript/Collections.ipynb
+++ b/typescript/Collections.ipynb
@@ -2010,9 +2010,80 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "af335cdd",
+   "metadata": {},
+   "source": [
+    "# Circular References\n",
+    "\n",
+    "Circular references aren't a problem for garbage collected languages because the marking algorithm can detect cycles.\n",
+    "\n",
+    "But they can create other issues such as :\n",
+    "  - infinite loops in code\n",
+    "  - issues converting to string and printing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "9342fd2c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting ts-files/circular-references.js\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile ts-files/circular-references.js\n",
+    "\n",
+    "const m = {};\n",
+    "m.self = m;\n",
+    "\n",
+    "console.log(m); // detects the cycle\n",
+    "// console.log(JSON.stringify(m)); // ILLEGAL\n",
+    "const n = structuredClone(m);\n",
+    "console.log(n); // detects the cycle again\n",
+    "console.log(n.self === n); // circular reference is duplicated properly\n",
+    "console.log();\n",
+    "\n",
+    "for (let i = 0; i < 1000; i++) {\n",
+    "    const o = m.self;\n",
+    "    // if this wasn't potentially infinite, this would fail on the 2nd iteration\n",
+    "    if (!o) {\n",
+    "        console.log('FAIL!');  // never prints\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "7fd977c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[36m<ref *1>\u001b[39m { self: \u001b[36m[Circular *1]\u001b[39m }\r\n",
+      "\u001b[36m<ref *1>\u001b[39m { self: \u001b[36m[Circular *1]\u001b[39m }\r\n",
+      "\u001b[33mtrue\u001b[39m\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!node ts-files/circular-references.js"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "079ef136",
+   "id": "21144dc5",
    "metadata": {},
    "outputs": [],
    "source": []
