Adding virtualenv and pyenv notes.

--- a/python/Conda and Pip.ipynb
+++ b/python/Conda and Pip.ipynb
@@ -1716,9 +1716,70 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "05ac6be1",
+   "metadata": {},
+   "source": [
+    "# virtualenv\n",
+    "\n",
+    "`virtualenv` is a __3rd party__ version of `venv` with more features.\n",
+    "\n",
+    "Commands:\n",
+    "  - `pip install virtualenv`\n",
+    "    - installs as a Python package\n",
+    "  - `virtualenv [path]`\n",
+    "    - creates a folder representing a virtual packaging environment\n",
+    "    - just like `python3 -m venv [path]`\n",
+    "  - `source somefolder/bin/activate`\n",
+    "    - just like `venv`\n",
+    "    - activtes environment in current shell session"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "066db00c",
+   "metadata": {},
+   "source": [
+    "# pyenv\n",
+    "\n",
+    "`pyenv` is a __3rd party__ solution for __Python version management__ (just Python itself - not packages).  It can be used in conjunction with `venv` or `virtualenv` (orthogonally).\n",
+    "\n",
+    "The code is on __GitHub__ and it can be installed via __Homebrew__ on Mac.\n",
+    "\n",
+    "To set up, follow the instructions on GitHub, which include echoing some commands into your `.zshrc` to set up the path and initialize `pyenv` on shell start.\n",
+    "\n",
+    "Commands:\n",
+    "\n",
+    "  - `pyenv install 3.8`\n",
+    "    - installs a python version (but doesn't activate it yet)\n",
+    "    - may take a while if has to build binaries (see docs for possible ways to make it go faster)\n",
+    "  - `pyenv versions`\n",
+    "    - show installed and activated versions\n",
+    "  - `pyenv global`\n",
+    "    - get current version set to run by default globally\n",
+    "  - `pyenv global 3.8`\n",
+    "    - set current version to run by default globally\n",
+    "    - all windows and all folders without having to activate again\n",
+    "  - `pyenv local`\n",
+    "    - get current version configured to run for __current folder__\n",
+    "      - __overrides global__ if set\n",
+    "    - looks for `.python-version` file\n",
+    "      - children automatically get the python version of their parent\n",
+    "  - `pyenv local 3.8`\n",
+    "    - drops the `.python-version` file to make python automatically 3.8 for this folder and all subfolders\n",
+    "  - `pyenv shell`\n",
+    "    - get current version configured to run for __current shell session__\n",
+    "      - __overrides local and global__ if set\n",
+    "  - `pyenv shell 3.8`\n",
+    "    - sets __current shell session__ version as described above\n",
+    "    \n",
+    "`pip` and `python` become redirected to the appropriate `pip3` and `python3`, so you can __drop the 3__ if using `pyenv`.  It will work with and without the 3."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e8bb488",
+   "id": "f569e678",
    "metadata": {},
    "outputs": [],
    "source": []
