Adding some minor updates.

--- a/javascript/Vanilla JS Syntax.ipynb
+++ b/javascript/Vanilla JS Syntax.ipynb
@@ -468,9 +468,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ffa7044b",
+   "metadata": {},
+   "source": [
+    "# Function Overloads\n",
+    "\n",
+    "JS functions cannot be overloaded.  Function overloading in TS is just a feature for the compiler and intellisense - ultimately you only have 1 implementation of the function which covers all the overloads."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69bf2ede",
+   "id": "d26dc230",
    "metadata": {},
    "outputs": [],
    "source": []
