--- a/typescript/Functions.ipynb
+++ b/typescript/Functions.ipynb
@@ -227,7 +227,9 @@
    "source": [
     "# Overloading\n",
     "\n",
-    "Since you're not allowed to redefine symbols, you can't do C++-style overloading, but there is a mechanism in TypeScript for it.\n"
+    "Since you're not allowed to redefine symbols, you can't do C++-style overloading, but there is a mechanism in TypeScript for it.\n",
+    "\n",
+    "Note that underneath, you are just providing 1 function that covers all the cases inside, and the overloads listed above are just for the TypeScript compiler."
    ]
   },
   {
