--- a/typescript/Modules and Imports.ipynb
+++ b/typescript/Modules and Imports.ipynb
@@ -1464,9 +1464,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6cfd14ab",
+   "metadata": {},
+   "source": [
+    "# Simulating Classes\n",
+    "\n",
+    "`import * as MyClass` and `export * as MyClass` can be used to simulate wrapper classes without having to provide the extra syntax."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fca87bd8",
+   "id": "8b6840cf",
    "metadata": {},
    "outputs": [],
    "source": []
