--- a/typescript/Standard Library.ipynb
+++ b/typescript/Standard Library.ipynb
@@ -32,7 +32,9 @@
    "source": [
     "# Console\n",
     "\n",
-    "Some of these were already discussed in the `Strings` notebook, but this is a more complete list."
+    "Some of these were already discussed in the `Strings` notebook, but this is a more complete list.\n",
+    "\n",
+    "__WARNING__: logging an object to the console may prevent it from being __garbage collected__, so don't do it too much in production."
    ]
   },
   {
